--- a/RabbitMq/composer.json
+++ b/RabbitMq/composer.json
@@ -13,5 +13,12 @@
     ],
     "require": {
         "php-amqplib/php-amqplib": "^3.5"
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Miladmmd\\RabbitMq\\Providers\\RabbitServiceProvider"
+            ]
+        }
     }
 }
