--- a/RabbitMq/composer.json
+++ b/RabbitMq/composer.json
@@ -20,5 +20,7 @@
                 "Miladmmd\\RabbitMq\\Providers\\RabbitServiceProvider"
             ]
         }
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
